# ZSQ-langgraph

enterprise-platform/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  代码实现全解.md
enterprise-platform/config/: permissions.yaml  settings.py
enterprise-platform/scripts/: init_db.py  init_postgres.sql  seed_data.py
enterprise-platform/src/api/: __init__.py  app.py  deps.py  middleware.py
enterprise-platform/src/api/routes/: __init__.py  admin.py  auth.py  chat.py  documents.py  sessions.py
enterprise-platform/src/api/schemas/: __init__.py  admin.py  auth.py  chat.py  document.py  session.py
enterprise-platform/src/db/: compat.py  database.py
enterprise-platform/src/db/models/: __init__.py  audit_log.py  document.py  document_chunk.py  role.py  schema_metadata.py  session.py  user.py
enterprise-platform/src/db/repositories/: __init__.py
enterprise-platform/src/llm/: factory.py
enterprise-platform/src/observability/: langfuse_tracer.py
enterprise-platform/src/orchestration/: edges.py  graph.py  state.py
enterprise-platform/src/security/: audit.py  rbac.py  sql_guard.py
enterprise-platform/src/tools/: __init__.py  base.py  data_masking.py  document_parsing.py  http_api.py  rag_retrieval.py  schema_retrieval.py  sql_execution.py  sql_validation.py  ticket_report.py
enterprise-platform/tests/: conftest.py  test_scenario_s1.py  test_scenario_s2.py  test_security.py  test_tools.py
enterprise-platform/web/: index.html  package-lock.json  package.json  vite.config.js
enterprise-platform/web/src/: App.vue  api.js
(+17 files in other folders)
